# mcp-server-hybrid-search

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: chunker.rs  embedding.rs  ingest.rs  main.rs  qdrant_client.rs  tantivy_index.rs
common/: Cargo.toml
common/src/: config.rs  types.rs
docs/: search-design.md
server/: Cargo.toml
server/src/: main.rs
server/src/mcp/: protocol.rs  server.rs  tools.rs
server/src/search/: embedding.rs  hybrid.rs  mod.rs  qdrant_search.rs  tantivy_search.rs
